@@ -94,12 +94,13 @@ httpclient.requester-pays-buckets-enabled=false
 # File/Object comparison properties
 ###
 
+filecomparer.ignore-panic-dir-placeholders=true
+filecomparer.ignore-s3organizer-dir-placeholders=true
 #filecomparer.skip-symlinks=false
 #filecomparer.use-md5-files=false
 #filecomparer.generate-md5-files=false
 #filecomparer.md5-files-root-dir=/custom/path/for/md5/files
 #filecomparer.skip-upload-of-md5-files=false
-#filecomparer.ignore-panic-dir-placeholders=false
 #filecomparer.assume-local-latest-in-mismatch=false
 
 
